k8s-manifest/demo-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-grpc-service
spec:
  selector:
    app: demo-grpc-server
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
