k8s-manifest/demo-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-deployment
  labels:
    app: demo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
      - name: demo-web
        image: roydockerrepo/demo-web:1.0
        ports:
        - containerPort: 80
