k8s-manifest/demo-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
