k8s-manifest/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - name: port80
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
    - name: admin-port
      protocol: TCP
      port: 8088
      targetPort: 9901
      nodePort: 30008
